Changed preview layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
 
     <string name="action_settings">Settings</string>
     <string name="without_connection">Without network</string>
+    <string name="without_tag">Without tag</string>
 
 </resources>
