--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,9 @@
 
     <string name="app_name">GZMD</string>
 
-    <string name="action_settings">Settings</string>
-    <string name="without_connection">Without network</string>
-    <string name="without_tag">Without tag</string>
+    <string name="action_settings">Configurações</string>
+    <string name="without_connection">Sem conexão</string>
+    <string name="without_tag">Sem tag</string>
     <string name="interface_settings">Configurações de interface</string>
     <string name="ask_to_exit">Perguntar ao sair</string>
     <string name="display_an_alert_to_exit">Exibir um alerta perguntando se deseja sair</string>
@@ -31,5 +31,6 @@
     <string name="new_bug">Novo erro</string>
     <string name="feedback">Feedback</string>
     <string name="contact">Contato</string>
+    <string name="back_again_to_exit">Pressione voltar novamente para sair</string>
 
 </resources>
