Adding night mode and general improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,10 @@
     <string name="feedback">Feedback</string>
     <string name="contact">Contato</string>
     <string name="back_again_to_exit">Pressione voltar novamente para sair</string>
+    <string name="menu_night_mode">Night mode</string>
+    <string name="menu_night_mode_system">Follow system</string>
+    <string name="menu_night_mode_day">Day (always)</string>
+    <string name="menu_night_mode_night">Night (always)</string>
+    <string name="menu_night_mode_auto">Auto</string>
 
 </resources>
