Adding "share and open in browser" options

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -51,5 +51,8 @@
     <string name="menu_night_mode_day">Day (always)</string>
     <string name="menu_night_mode_night">Night (always)</string>
     <string name="menu_night_mode_system">Follow system</string>
+    <string name="shared_by">%s\n\n- Shared by GZMD</string>
+    <string name="see_like_page">See like page</string>
+    <string name="open_in_browser">Open in browser</string>
 
 </resources>
