Removing splash screen and general improvements

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -54,5 +54,6 @@
     <string name="shared_by">%s\n\n- Shared by GZMD</string>
     <string name="see_like_page">See like page</string>
     <string name="open_in_browser">Open in browser</string>
+    <string name="action_refresh">Update</string>
 
 </resources>
