--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -57,5 +57,7 @@
     <string name="action_refresh">Update</string>
     <string name="enable_auto_scroll_on_posts">Enable auto scroll on posts</string>
     <string name="enable_auto_scroll_on_posts_description">Enable automatic movement of the posts read</string>
+    <string name="error_trying_to_load_posts">Error trying to load posts</string>
+    <string name="error_trying_to_load_previews">Error trying to load previews</string>
 
 </resources>
