--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,48 +19,46 @@
 <resources>
 
     <string name="app_name">GZMD</string>
-
-    <string name="action_settings">Configurações</string>
-    <string name="without_connection">Sem conexão</string>
-    <string name="without_tag">Sem tag</string>
-    <string name="interface_settings">Configurações de interface</string>
-    <string name="ask_to_exit">Perguntar ao sair</string>
-    <string name="display_an_alert_to_exit">Exibir um alerta perguntando se deseja sair</string>
-    <string name="about">Sobre</string>
-    <string name="about_the_app">Sobre o aplicativo</string>
-    <string name="rate_the_app">Avalie</string>
-    <string name="publish_a_review">Publique uma revisão sobre o GZMD</string>
-    <string name="share_the_app">Compartilhe</string>
-    <string name="share_the_app_with_your_friends">Compartilhe o GZMD com seus amigos</string>
-    <string name="report_a_bug">Reporte um erro</string>
-    <string name="tell_us_about_a_crash">Conte-nos sobre um acidente, um problema de design, travamentos…</string>
-    <string name="an_idea_to_improve">Uma idéia para melhorar o GZMD?</string>
-    <string name="send_us_your_ideas_and_suggestions">Envie-nos suas idéias e sugestões</string>
-    <string name="like_the_gzmd">Gostou do GZMD?</string>
-    <string name="send_us_your_feedback">Conte-nos suas experiências e opiniões</string>
-    <string name="contact_us">Contate-nos</string>
-    <string name="send_us_a_email">Envie-nos um email</string>
-    <string name="share_app_message">Instale o GZMD e visualize as notícias do Gizmodo Br mais
-        facilmente. Baixe agora o aplicativo no link %s e comece a usar.</string>
-    <string name="choose_app">Escolha um aplicativo</string>
-    <string name="suggestions">Sugestões</string>
-    <string name="new_bug">Novo erro</string>
+    <string name="about">About</string>
+    <string name="about_the_app">About app</string>
+    <string name="action_settings">Settings</string>
+    <string name="an_idea_to_improve">One idea to improve GZMD?</string>
+    <string name="ask_to_exit">Ask to exit</string>
+    <string name="back_again_to_exit">Back again to exit</string>
+    <string name="choose_app">Choose an app</string>
+    <string name="contact">Contact</string>
+    <string name="contact_us">Contact us</string>
+    <string name="display_an_alert_to_exit">Display an alert asking if you want to leave</string>
     <string name="feedback">Feedback</string>
-    <string name="contact">Contato</string>
-    <string name="back_again_to_exit">Pressione voltar novamente para sair</string>
-    <string name="menu_night_mode">Modo noturno</string>
-    <string name="menu_night_mode_system">Sistema</string>
-    <string name="menu_night_mode_day">Dia (sempre)</string>
-    <string name="menu_night_mode_night">Noite (sempre)</string>
+    <string name="interface_settings">Interface settings</string>
+    <string name="like_the_gzmd">Liked GZMD?</string>
+    <string name="new_bug">New bug</string>
+    <string name="publish_a_review">Publish a review on the GZMD</string>
+    <string name="rate_the_app">Rate</string>
+    <string name="report_a_bug">Report a bug</string>
+    <string name="send_us_a_email">Send us a email</string>
+    <string name="send_us_your_feedback">Tell us your experiences and opinions</string>
+    <string name="send_us_your_ideas_and_suggestions">Send us your ideas and suggestions</string>
+    <string name="share_app_message">Install GZMD to view notices from Gizmodo Br more easily. Download now the application from the link %s to start using.</string>
+    <string name="share_the_app">Share</string>
+    <string name="share_the_app_with_your_friends">Share GZMD with your friends</string>
+    <string name="suggestions">Suggestions</string>
+    <string name="tell_us_about_a_crash">Tell us about a crash, a design problem, lags…</string>
+    <string name="without_connection">Without network</string>
+    <string name="without_tag">Without tag</string>
+    <string name="menu_night_mode">Night mode</string>
     <string name="menu_night_mode_auto">Auto</string>
-    <string name="open_in_browser">Abrir no navegador</string>
-    <string name="shared_by">%s\n\n- Compartilhado via GZMD</string>
-    <string name="action_refresh">Atualizar</string>
-    <string name="enable_auto_scroll_on_posts">Habilitar scroll automático</string>
-    <string name="enable_auto_scroll_on_posts_description">Habilita movimentação automática dos posts para leitura</string>
-    <string name="keep_screen_on">Manter tela ativa</string>
-    <string name="keep_screen_on_description">Manter tela ativa durante leitura dos posts</string>
-    <string name="error_trying_to_load_previews">Ocorreu um erro ao tentar carregar as pré-visualizações</string>
-    <string name="error_trying_to_load_posts">Ocorreu um erro ao tentar carregar os posts</string>
+    <string name="menu_night_mode_day">Day (always)</string>
+    <string name="menu_night_mode_night">Night (always)</string>
+    <string name="menu_night_mode_system">Follow system</string>
+    <string name="shared_by">%s\n\n- Shared by GZMD</string>
+    <string name="open_in_browser">Open in browser</string>
+    <string name="keep_screen_on">Keep screen on</string>
+    <string name="keep_screen_on_description">Keep screen on in posts</string>
+    <string name="action_refresh">Update</string>
+    <string name="enable_auto_scroll_on_posts">Enable auto scroll on posts</string>
+    <string name="enable_auto_scroll_on_posts_description">Enable automatic movement of the posts read</string>
+    <string name="error_trying_to_load_posts">Error trying to load posts</string>
+    <string name="error_trying_to_load_previews">Error trying to load previews</string>
 
 </resources>
