--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -62,5 +62,8 @@
     <string name="keep_screen_on_description">Manter tela ativa durante leitura dos posts</string>
     <string name="error_trying_to_load_previews">Ocorreu um erro ao tentar carregar as pré-visualizações</string>
     <string name="error_trying_to_load_posts">Ocorreu um erro ao tentar carregar os posts</string>
+    <string name="gizmodo_about_title">GZMD é um aplicativo não oficial pro Gizmodo BR</string>
+    <string name="gizmodo_about_description">Acompanhe o Gizmodo BR pelas redes sociais</string>
+    <string name="open_source_licenses">Licenças de Código aberto</string>
 
 </resources>
