--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,5 +63,11 @@
     <string name="open_source_licenses">Open source licenses</string>
     <string name="gizmodo_about_title">GZMD é um aplicativo não oficial pro Gizmodo BR</string>
     <string name="gizmodo_about_description">Acompanhe o Gizmodo BR pelas redes sociais</string>
+    <string name="menu_view">View</string>
+    <string name="menu_hands_on">Hands On</string>
+    <string name="menu_review">Review</string>
+    <string name="menu_special">Special</string>
+    <string name="menu_game">Game</string>
+    <string name="menu_home">Home</string>
 
 </resources>
