--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,11 @@
 
     <string name="app_name">GZMD</string>
     <string name="about">About</string>
-    <string name="about_the_app">About app</string>
+    <string name="about_the_app">About this app</string>
     <string name="action_settings">Settings</string>
-    <string name="an_idea_to_improve">One idea to improve GZMD?</string>
+    <string name="an_idea_to_improve">Help us improve</string>
     <string name="ask_to_exit">Ask to exit</string>
-    <string name="back_again_to_exit">Back again to exit</string>
+    <string name="back_again_to_exit">Press back again to exit</string>
     <string name="choose_app">Choose an app</string>
     <string name="contact">Contact</string>
     <string name="contact_us">Contact us</string>
@@ -33,12 +33,12 @@
     <string name="interface_settings">Interface settings</string>
     <string name="like_the_gzmd">Liked GZMD?</string>
     <string name="new_bug">New bug</string>
-    <string name="publish_a_review">Publish a review on the GZMD</string>
-    <string name="rate_the_app">Rate</string>
+    <string name="publish_a_review">Tell your opinion about the app</string>
+    <string name="rate_the_app">Rate us</string>
     <string name="report_a_bug">Report a bug</string>
     <string name="send_us_a_email">Send us a email</string>
     <string name="send_us_your_feedback">Tell us your experiences and opinions</string>
-    <string name="send_us_your_ideas_and_suggestions">Send us your ideas and suggestions</string>
+    <string name="send_us_your_ideas_and_suggestions">Send suggestions and ideas</string>
     <string name="share_app_message">Install GZMD to view notices from Gizmodo Br more easily. Download now the application from the link %s to start using.</string>
     <string name="share_the_app">Share</string>
     <string name="share_the_app_with_your_friends">Share GZMD with your friends</string>
@@ -54,19 +54,19 @@
     <string name="shared_by">%s\n\n- Shared by GZMD</string>
     <string name="open_in_browser">Open in browser</string>
     <string name="keep_screen_on">Keep screen on</string>
-    <string name="keep_screen_on_description">Keep screen on in posts</string>
-    <string name="action_refresh">Update</string>
-    <string name="enable_auto_scroll_on_posts">Enable auto scroll on posts</string>
-    <string name="enable_auto_scroll_on_posts_description">Enable automatic movement of the posts read</string>
+    <string name="keep_screen_on_description"> Keep screen on while reading posts</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="enable_auto_scroll_on_posts">Enable auto scroll</string>
+    <string name="enable_auto_scroll_on_posts_description">Enable auto scroll while reading posts</string>
     <string name="error_trying_to_load_posts">Error trying to load posts</string>
     <string name="error_trying_to_load_previews">Error trying to load previews</string>
     <string name="open_source_licenses">Open source licenses</string>
     <string name="gizmodo_about_title">GZMD is an unofficial application for Gizmodo BR</string>
-    <string name="gizmodo_about_description">Follow Gizmodo BR by social networks</string>
-    <string name="menu_view">View</string>
+    <string name="gizmodo_about_description">Follow Gizmodo BR on social media</string>
+    <string name="menu_view">Section</string>
     <string name="menu_hands_on">Hands On</string>
     <string name="menu_review">Reviews</string>
-    <string name="menu_special">Special</string>
+    <string name="menu_special">Highlights</string>
     <string name="menu_game">Games</string>
     <string name="menu_home">Home</string>
     <string name="scroll_speed">Scroll Speed</string>
